--- a/scss/common.mobile.scss
+++ b/scss/common.mobile.scss
@@ -5,6 +5,19 @@
     grid-template-columns: 1fr;
     grid-auto-rows: 50vw;
     row-gap: 50px;
+    width: 70%;
+    margin: 70px 15% 0;
+  }
+
+  .header {
+    margin: 70px 5% 0;
+    width: 90%;
+  }
+
+  .content {
+    margin: 50px 5%;
+    width: 90%;
+    line-height: 1.4em;
   }
 
   .navbar__links {
